--- a/currency/distribution/nginx.conf
+++ b/currency/distribution/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 8085 default_server;              # becomes the chosen vhost
+    listen 8001 default_server;
     server_name _;
 
     root /opt/odigos-demo-currency;
