--- a/pricing/distribution/systemd.service
+++ b/pricing/distribution/systemd.service
@@ -8,7 +8,7 @@ ExecStart=dotnet /opt/odigos-demo-pricing/pricing.dll
 KillMode=mixed
 Restart=on-failure
 RestartSec=1s
-RestartSteps=1s
+RestartSteps=3
 RestartMaxDelaySec=1min
 Type=simple
 User=odigos
