--- a/frontend/distribution/systemd.service
+++ b/frontend/distribution/systemd.service
@@ -7,7 +7,7 @@ ExecStart=java -jar /opt/odigos-demo-frontend/frontend.jar
 KillMode=mixed
 Restart=on-failure
 RestartSec=1s
-RestartSteps=1s
+RestartSteps=3
 RestartMaxDelaySec=1min
 Type=simple
 User=odigos
