feat: add http client call from membership to pricing

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -304,6 +304,9 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
+          env:
+            - name: PRICING_SERVICE_HOST
+              value: pricing:8080
 ---
 kind: Service
 apiVersion: v1
