--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
       - '8081:8081'
     environment:
       PORT: 8081
+      PRICING_SERVICE_HOST: pricing:8080
   inventory:
     build:
       context: ./inventory
