--- a/membership/deployment/deployment.yaml
+++ b/membership/deployment/deployment.yaml
@@ -18,4 +18,7 @@ spec:
         image: dev/membership:dev
         ports:
         - containerPort: 8080
+        env:
+        - name: PRICING_SERVICE_HOST
+          value: pricing:8080
   
