--- a/inventory/deployment/deployment.yaml
+++ b/inventory/deployment/deployment.yaml
@@ -18,5 +18,21 @@ spec:
         image: dev/inventory:dev
         ports:
         - containerPort: 8080
+        livenessProbe:
+          httpGet:
+            path: /health/liveness
+            port: 8080
+          initialDelaySeconds: 10
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
+        readinessProbe:
+          httpGet:
+            path: /health/readiness
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          timeoutSeconds: 3
+          failureThreshold: 3
         securityContext:
           runAsUser: 1000
