--- a/geolocation/deployment/deployment.yaml
+++ b/geolocation/deployment/deployment.yaml
@@ -26,6 +26,22 @@ spec:
                 secretKeyRef:
                   name: rails-master-key
                   key: master.key
+          livenessProbe:
+            httpGet:
+              path: /up
+              port: 3000
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 3
+          readinessProbe:
+            httpGet:
+              path: /up
+              port: 3000
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            timeoutSeconds: 3
+            failureThreshold: 3
 ---
 apiVersion: v1
 kind: Secret
