--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -7,5 +7,5 @@ resources:
   - jaeger.yaml
   - instrument-all.yaml
   - jaeger-dest.yaml
-  - promethues.yaml
-  - promethues-dest.yaml
+  - prometheus.yaml
+  - prometheus-dest.yaml
