--- a/frontend/distribution/systemd.service
+++ b/frontend/distribution/systemd.service
@@ -6,7 +6,7 @@ After=network.target
 ExecStart=java -jar /opt/odigos-demo-frontend/frontend.jar
 KillMode=mixed
 Restart=on-failure
-RestartSec=1s
+RestartSec=1
 RestartSteps=1s
 RestartMaxDelaySec=1min
 Type=simple
@@ -16,7 +16,7 @@ Environment="PORT=8080"
 Environment="INVENTORY_SERVICE_HOST=localhost:8082"
 Environment="PRICING_SERVICE_HOST=localhost:8083"
 Environment="COUPON_SERVICE_HOST=localhost:8084"
-Environment="CURRENCY_SERVICE_HOST=localhost:8085"
+Environment="CURRENCY_SERVICE_HOST=localhost:9000"
 Environment="GEOLOCATION_SERVICE_HOST=localhost:8086"
 
 [Install]
