--- a/coupon/distribution/systemd.service
+++ b/coupon/distribution/systemd.service
@@ -6,7 +6,7 @@ After=network.target
 ExecStart=node /opt/odigos-demo-coupon/app.js
 KillMode=mixed
 Restart=on-failure
-RestartSec=1s
+RestartSec=1
 RestartSteps=1s
 RestartMaxDelaySec=1min
 Type=simple
