--- a/inventory/distribution/systemd.service
+++ b/inventory/distribution/systemd.service
@@ -6,9 +6,9 @@ After=network.target
 ExecStart=python3 /opt/odigos-demo-inventory/main.py
 KillMode=mixed
 Restart=on-failure
-RestartSec=1s
-RestartSteps=1s
-RestartMaxDelaySec=1min
+RestartSec=1
+RestartSteps=5
+RestartMaxDelaySec=60
 Type=simple
 User=odigos
 Group=odigos
