--- a/membership/distribution/systemd.service
+++ b/membership/distribution/systemd.service
@@ -6,13 +6,14 @@ After=network.target
 ExecStart=/usr/bin/odigos-demo-membership
 KillMode=mixed
 Restart=on-failure
-RestartSec=1s
+RestartSec=1
 RestartSteps=1s
 RestartMaxDelaySec=1min
 Type=simple
 User=odigos
 Group=odigos
 Environment="PORT=8081"
+Environment="PRICING_SERVICE_HOST=localhost:8080"
 
 [Install]
 WantedBy=multi-user.target
