--- a/geolocation/nfpm.yaml
+++ b/geolocation/nfpm.yaml
@@ -1,26 +1,35 @@
 name: odigos-demo-geolocation
-arch: all
+# arch/version set by Docker build args (TARGETARCH, VERSION) in package stage
+arch: ${TARGETARCH}
 platform: linux
-version: 1.0.0
+version: ${VERSION}
 section: default
 priority: extra
-maintainer: Odigos
-description: |
-  Demo Ruby on Rails application for testing Odigos
+maintainer: Odigos <info@odigos.io>
 vendor: Odigos
 homepage: https://odigos.io
+description: |
+  Demo Ruby on Rails application for testing Odigos
 contents:
-  - src: dist/odigos-demo-geolocation
-    dst: /opt/odigos-demo-geolocation
-
-  - src: config/master.key
-    dst: /opt/odigos-demo-geolocation/config/master.key
-
-  - src: distribution/systemd.service
-    dst: /lib/systemd/system/odigos-demo-geolocation.service
-    file_info:
-      mode: 0644
+- src: distribution/systemd.service
+  dst: /lib/systemd/system/odigos-demo-geolocation.service
+- src: ./dist/app
+  dst: /opt/odigos-demo-geolocation
 scripts:
   preinstall: ./distribution/preinstall.sh
   postinstall: ./distribution/postinstall.sh
   preremove: ./distribution/preremove.sh
+overrides:
+  rpm:
+    depends:
+    - ruby
+    - ruby-bundler
+    contents:
+    - src: distribution/systemd.service
+      dst: /lib/systemd/system/odigos-demo-geolocation.service
+    - src: ./dist/app
+      dst: /opt/odigos-demo-geolocation
+  deb:
+    depends:
+    - ruby
+    - bundler
