--- a/currency/distribution/php-fpm.conf
+++ b/currency/distribution/php-fpm.conf
@@ -1,15 +1,18 @@
-[odigos-demo-currency]
-user  = www-data
-group = www-data
+; Global: use syslog so logs go to systemd journal
+[global]
+error_log = syslog
 
-listen        = /run/php/odigos-demo-currency.sock
-listen.owner  = www-data
-listen.group  = www-data
+[odigos-demo-currency]
+user  = odigos
+group = odigos
+listen = 0.0.0.0:9000
+listen.owner = odigos
+listen.group  = odigos
 listen.mode   = 0660
 
 catch_workers_output        = yes
 php_admin_flag[log_errors]  = On
-php_admin_value[error_log]  = /proc/self/fd/2
+php_admin_value[error_log]  = syslog
 
 pm              = dynamic
 pm.max_children = 5
