--- a/pricing/distribution/systemd.service
+++ b/pricing/distribution/systemd.service
@@ -7,7 +7,7 @@ After=network.target
 ExecStart=dotnet /opt/odigos-demo-pricing/pricing.dll
 KillMode=mixed
 Restart=on-failure
-RestartSec=1s
+RestartSec=1
 RestartSteps=1s
 RestartMaxDelaySec=1min
 Type=simple
