--- a/.github/workflows/pr-verify.yml
+++ b/.github/workflows/pr-verify.yml
@@ -21,7 +21,7 @@ jobs:
           - membership
           - pricing
           - load-generator
-    runs-on: ubuntu-latest
+    runs-on: depot-ubuntu-24.04-4
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
